--- a/Test2.html
+++ b/Test2.html
@@ -50,7 +50,7 @@
               font-size: 53px;
           }
           body{
-              background: url("фон.jpg");
+              background: url("Фон.jpg");
           }
 
           
