--- a/Test2.html
+++ b/Test2.html
@@ -37,6 +37,7 @@
               width: 130px;
               background: url("Телеграм.png");
               position: absolute;
+              top: 65%;
               right: 75%;
           }
           .logo2{
@@ -44,7 +45,8 @@
               width: 130px;
               background: url("Телеграм.png");
               position: absolute;
-              left: 75%
+              top: 65%;
+              left: 75%;
           }
           .opisanie{
               font-size: 53px;
