--- a/Test2.html
+++ b/Test2.html
@@ -64,7 +64,7 @@
   </head>
 
   <body>
-      <div class = "container">
+      <div class = "container" style="width: 1200px; height: 700px;>
           <div class = "start">
               <font face = "Impact"; color = "White";><h1 class = "opisanie" align = "center">Сайт создан для людей с повышенным
 интелектом и самооценкой, если вы не хотите
