--- a/Test2.html
+++ b/Test2.html
@@ -50,6 +50,8 @@
           }
           .opisanie{
               font-size: 53px;
+               -webkit-text-stroke-width: 3px;
+               -webkit-text-stroke-color: black;
           }
           body{
               background: url("Фон.jpg");
