--- a/Test2.html
+++ b/Test2.html
@@ -68,11 +68,11 @@
   <body>
       <div class = "container" style="width: 1200px; height: 700px;>
           <div class = "start">
-              <font face = "Impact"; color = "White";><h1 class = "opisanie" align = "center">Сайт создан для людей с повышенным
+            <font face="Impact" ;="" color="White"><h1 class="opisanie" align="center">Сайт создан для людей с повышенным
 интелектом и самооценкой, если вы не хотите
-иметь IQ кау у хлебушка, то переходите по
-ссылке и вступите в два телеграм 
-канала с отличными стикерами,
+иметь IQ кау у хлебушка, то переходите по<br>
+ссылке и вступите в два телеграм <br>
+канала с отличными стикерами,<br>
 желаю вам всего наилудшего.</h1></font>
               <div class = "telegram1">
                   <a href = "https://t.me/CumInsideIntel"><font face = "Arial"><p style= "font-size: 40px; position: relative; text-align: center; color: blue">первый канал</p></font></a>     
