--- a/Test2.html
+++ b/Test2.html
@@ -26,11 +26,16 @@
               position: absolute;
               right: 70%;
               top: 80%;
+               -webkit-text-stroke-width: 3px;
+   -webkit-text-stroke-color: blue;
           }
           .telegram2{
               position: absolute;
               left: 70%;
               top: 80%;
+               -webkit-text-stroke-width: 3px;
+   -webkit-text-stroke-color: blue;
+            
           }  
           .logo{
               height: 130px;
@@ -52,6 +57,9 @@
               font-size: 53px;
                -webkit-text-stroke-width: 3px;
                -webkit-text-stroke-color: black;
+               line-height: 60px;
+               position: absolute;
+               top: 5%;  
           }
           body{
               background: url("Фон.jpg");
