--- a/Test2.html
+++ b/Test2.html
@@ -64,6 +64,10 @@
           body{
               background: url("Фон.jpg");
           }
+          .musicontrol{
+              width: 300px;
+              height: 130px;
+          }
 
           
       </style>
@@ -93,6 +97,11 @@
               </div>
               <div class = "logo2">
                   
+              </div>
+               <div class = "music" style="tab-size: 1100px">
+                  <audio controls class = "musicontrol">
+                      <source src = "Gimn.mp3">
+                 </audio>
               </div>
           </div>
       </div>
