--- a/Test2.html
+++ b/Test2.html
@@ -68,6 +68,14 @@
               width: 300px;
               height: 130px;
           }
+          .music{
+              background-color: transparent;
+              width: 500px;
+              height: 130px;
+              position: absolute;
+              right: 21%;
+              top: 50%;
+          }
 
           
       </style>
