--- a/CumIn.html
+++ b/CumIn.html
@@ -76,8 +76,9 @@
               right: 21%;
               top: 50%;
           }
-
-          
+          .txt:hover{
+          color:aliceblue;                
+          }
       </style>
       <meta charset = "UFT-8">
       <link rel = "stylesheet" href = "assets\css\style.css">
@@ -95,10 +96,10 @@
 канала с отличными стикерами,<br>
 желаю вам всего наилудшего.</h1></font>
               <div class = "telegram1">
-                  <a href = "https://t.me/CumInsideIntel"><font face = "Arial"><p style= "font-size: 40px; position: relative; text-align: center; color: blue">первый канал</p></font></a>     
+                  <a href = "https://t.me/CumInsideIntel"><font face = "Arial color = "blue"><p class = "txt" style = "font-size: 40px; position: relative; text-align: center;">первый канал</p></font></a>     
               </div>         
               <div class = "telegram2">                  
-                  <a href = "https://t.me/MASTRESE"><font face = "Arial"><p style= "font-size: 40px; position: relative; text-align: center; color: blue">второй канал</p></font></a>
+                  <a href = "https://t.me/MASTRESE"><font face = "Arial" color = "blue"><p class = "txt" style = "font-size: 40px; position: relative; text-align: center;">второй канал</p></font></a>
               </div>
               <div class = "logo">
                   
