--- a/CumIn.html
+++ b/CumIn.html
@@ -79,6 +79,12 @@
           .txt:hover{
           color:aliceblue;                
           }
+          .txt:active{
+              color:gray;
+          }
+          .txt:focus{
+              color:blue;
+          }
       </style>
       <meta charset = "UFT-8">
       <link rel = "stylesheet" href = "assets\css\style.css">
