--- a/CumIn.html
+++ b/CumIn.html
@@ -85,6 +85,15 @@
           .txt:focus{
               color:blue;
           }
+          .txt2:hover{
+          color:aliceblue;                
+          }
+          .txt2:active{
+              color:gray;
+          }
+          .txt2:focus{
+              color:blue;
+          }
       </style>
       <meta charset = "UFT-8">
       <link rel = "stylesheet" href = "assets\css\style.css">
@@ -105,7 +114,7 @@
                   <a href = "https://t.me/CumInsideIntel"><font face = "Arial color = "blue"><p class = "txt" style = "font-size: 40px; position: relative; text-align: center;">первый канал</p></font></a>     
               </div>         
               <div class = "telegram2">                  
-                  <a href = "https://t.me/MASTRESE"><font face = "Arial" color = "blue"><p class = "txt" style = "font-size: 40px; position: relative; text-align: center;">второй канал</p></font></a>
+                  <a href = "https://t.me/MASTRESE"><font face = "Arial" color = "blue"><p class = "txt2" style = "font-size: 40px; position: relative; text-align: center;">второй канал</p></font></a>
               </div>
               <div class = "logo">
                   
