--- a/CumIn.html
+++ b/CumIn.html
@@ -111,10 +111,10 @@
 канала с отличными стикерами,<br>
 желаю вам всего наилудшего.</h1></font>
               <div class = "telegram1">
-                  <a href = "https://t.me/CumInsideIntel"><font face = "Arial color = "blue"><p class = "txt" style = "font-size: 40px; position: relative; text-align: center;">первый канал</p></font></a>     
+                  <a href = "https://t.me/CumInsideIntel"><font face = "Arial" color = "blue"><p class = "txt2" style = "font-size: 40px; position: relative; text-align: center;">Первый канал</p></font></a>     
               </div>         
               <div class = "telegram2">                  
-                  <a href = "https://t.me/MASTRESE"><font face = "Arial" color = "blue"><p class = "txt2" style = "font-size: 40px; position: relative; text-align: center;">второй канал</p></font></a>
+                  <a href = "https://t.me/MASTRESE"><font face = "Arial" color = "blue"><p class = "txt2" style = "font-size: 40px; position: relative; text-align: center;">Второй канал</p></font></a>                  
               </div>
               <div class = "logo">
                   
