--- a/CumIn.html
+++ b/CumIn.html
@@ -107,7 +107,7 @@
             <font face="Impact" ;="" color="White"><h1 class="opisanie" align="center">Сайт создан для людей с повышенным
 интелектом и самооценкой, если вы не хотите
 иметь IQ кау у хлебушка, то переходите по<br>
-ссылке и вступите в два телеграм <br>
+ссылке и вступите в д 2ва телеграм <br>
 канала с отличными стикерами,<br>
 желаю вам всего наилудшего.</h1></font>
               <div class = "telegram1">
